--- a/springboot-jpa-example/src/main/resources/application.properties
+++ b/springboot-jpa-example/src/main/resources/application.properties
@@ -13,4 +13,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
 
+security.basic.enabled=false
+management.security.enabled=false
 
